Fix scrollbar position

--- a/frontend/src/app/scenes/home-page/components/home-page/home-page.component.sass
+++ b/frontend/src/app/scenes/home-page/components/home-page/home-page.component.sass
@@ -46,6 +46,7 @@
     min-height: 3em
     overflow: hidden
     overflow-y: auto
+    overflow-y: overlay
     .icon-wrapper
         display: inline-block
         float: right
